apps/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: linkding
  labels:
    app: linkding
spec:
  selector:
    app: linkding
  ports:
    - port: 9090
      targetPort: 9090
  type: ClusterIP
