apps/linkding/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: linkding
 namespace: linkding
spec:
 hostnames:
 - linkding.tomasmerino.com
 parentRefs:
 - name: homelab-gateway
   namespace: networking
   sectionName: https
 rules:
  - backendRefs:
    - name: linkding
      port: 9090
